--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.52"
 async-trait = "0.1.52"
 lru = "0.7.2"
 tokio = { version = "1.15.0", features = ["full"] }
