--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.65"
 async-trait = "0.1.57"
+color-eyre = "0.6.2"
 lru = "0.8.0"
 tokio = { version = "1.21.1", features = ["full"] }
 
