--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,10 @@ edition = "2021"
 
 [dependencies]
 async-trait = "0.1.57"
+bincode = "1.3.3"
 color-eyre = "0.6.2"
 lru = "0.8.0"
+serde = { version = "1.0.145", features = ["derive"] }
 tokio = { version = "1.21.1", features = ["full"] }
 
 [dev-dependencies]
